--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<!-- title = variable in *.ts -->
-<div class="test"> {{title}}</div>
+<app-binding></app-binding>
 
-<!-- click event -->
-<div (click)="clickButton()" class="button" > click button </div>
+<app-binding2></app-binding2>
 
-<h1 style="color: blue;">{{numberOfClick}}</h1>
+<app-html-attribute></app-html-attribute>
+
+<app-ng-for></app-ng-for>
+
+
