--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+/* https://www.w3schools.com/css/css3_buttons.asp */
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1{
+  @extend.button;  // thừa kế các thuộc tính của button
+  background-color: #4CAF50;
+}
+
+.button2{
+  @extend.button; // thừa kế các thuộc tính của button
+  background-color: #008CBA;
+}
+
+.button3{
+  @extend.button; // thừa kế các thuộc tính của button
+  background-color: #f44336;
+}
+
