--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
 
 <app-binding2></app-binding2>
 
+<app-form-input></app-form-input>
+
 <app-html-attribute></app-html-attribute>
+
 
 <app-ng-for></app-ng-for>
 
