--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-binding></app-binding>
-
 <app-binding2></app-binding2>
 
 <app-form-input></app-form-input>
@@ -7,7 +6,9 @@
 <app-html-attribute></app-html-attribute>
 
 <app-ng-class></app-ng-class>
+<app-ng-style></app-ng-style>
 
+<app-ng-if></app-ng-if>
 <app-ng-for></app-ng-for>
 
 
