--- a/src/app/binding/binding.component.html
+++ b/src/app/binding/binding.component.html
@@ -1,6 +1,7 @@
 <!-- title = variable in *.ts -->
 <div class="binding-component-layout">
   <h2> {{title}}</h2>
+  <p>{{user.name}}</p>
 
   <!-- click event -->
   <div (click)="clickButton()" class="button"> click button </div>
