--- a/src/app/binding2/binding2.component.html
+++ b/src/app/binding2/binding2.component.html
@@ -1,5 +1,5 @@
 <div class="binding2-component-layout">
-  <h1>Two-way Binding component: </h1>
+  <h1>binding2.component: binding 2 way </h1>
   <p style="color: red;"> cách 1: gộp @input [] và @output () vào làm 1 </p>
   <p>
     <span>Value: {{ name }}</span>
