--- a/src/app/html-attribute/html-attribute.component.html
+++ b/src/app/html-attribute/html-attribute.component.html
@@ -1,5 +1,5 @@
 <div class="html-attribute-component-layout">
-  <h1>html-attribute with Angular:</h1>
+  <h1>html-attribute.component:</h1>
   <p> @input = [] với các html tag chuẩn </p>
   <!-- url là biến trên *.component.ts -->
   <!-- src là attribute cua <img> tag -->
