--- a/src/app/form-input/form-input.component.html
+++ b/src/app/form-input/form-input.component.html
@@ -1,7 +1,7 @@
 <!-- Angular chi update binding khi có event phát sinh-->
 <!-- (keyup)="0" là một event để thông báo Angular update binding. Ta có thể dùng event khác -->
 <div class="form-input-component-layout"  (keyup)="0" >
-  <h1>formInputComponent here</h1>
+  <h1>form-input.Component: </h1>
   <p style="color: red;"> ko nên dùng cách này => nên dùng 2ways binding:</p>
   <p> (keyup)="eventKeyUp()" ở input tag để thông báo text change </p>
 
