--- a/src/app/ng-for/ng-for.component.html
+++ b/src/app/ng-for/ng-for.component.html
@@ -1,10 +1,48 @@
 <div class="ngfor-component-layout">
-  <h1>ng-for component here:</h1>
-  <p>angular *ngFor example</p>
-  <ul>
-    <li *ngFor="let customer of customers">{{customer.name}} : {{customer.age}} years</li>
+  <h1>ng-for.component: *ngFor</h1>
+
+  <!-- **************************************************************** -->
+  <h3>example 1:</h3>
+  <p style="color: red;">*ngFor="let customer of customers</p>
+  <p>customer.id : customer.name</p>
+
+  <ul class="ng-for-list-box">
+    <li *ngFor="let customer of customers">{{customer.id}} : {{customer.name}} </li>
   </ul>
-  <h2> example 2: </h2>
+
+  <!-- **************************************************************** -->
+  <h3> example 2: </h3>
   <!-- vùng trong expression của (click) là JavaScript ko cần {{}} -->
-  <button class="button" *ngFor="let customer of customers" (click)="this.clickButton(customer.name)">{{customer.name}} </button>
+  <button class="button" *ngFor="let customer of customers" (click)="this.clickButton(customer.name)">{{customer.name}}
+  </button>
+
+  <h3> *ngFor index:</h3>
+  <p style="color: red;">*ngFor="let customer of customers; let i=index</p>
+  <p>index - customer.id : customer.name</p>
+
+  <ul class="ng-for-list-box">
+    <li *ngFor="let customer of customers; let i=index">{{i}} - {{customer.id}} : {{customer.name}}</li>
+  </ul>
+
+  <p>----------------------------------------------------------------------</p>
+  <!-- trackby: sẽ check  -->
+  <h3> *ngFor trackBy</h3>
+  <p style="color: red;">*ngFor="let customer of customers; let i=index; trackBy: trackById</p>
+  <p>index - customer.id : customer.name</p>
+
+  <button (click)="resetList()">Reset items</button>
+  <button (click)="changeIds()">Change ids</button>
+
+
+  <div class="ng-for-list-box">
+    <!-- index là biến local có giá trị trong double quote. "i" là biến toàn cục -->
+    <!-- trackById(index,customer): là function pointer. Ta phải implement nó ở typeScript -->
+    <!-- sẽ so sánh giá trị trả về của Array mới và cũ để update tại customer[index] -->
+    <div *ngFor="let customer of customers; let i=index; trackBy: trackById">
+      {{i}} - {{customer.id}} : {{customer.name}}
+    </div>
+
+  </div>
+
+
 </div>
