--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-binding></app-binding>
 <app-binding2></app-binding2>
 
+<app-binding2-radio></app-binding2-radio>
+
 <app-form-input></app-form-input>
 
 <app-html-attribute></app-html-attribute>
@@ -10,5 +12,7 @@
 
 <app-ng-if></app-ng-if>
 <app-ng-for></app-ng-for>
+
+<app-ng-switch></app-ng-switch>
 
 
