--- a/src/app/ng-class/ng-class.component.html
+++ b/src/app/ng-class/ng-class.component.html
@@ -35,7 +35,7 @@
     {{ isModified ? "unmodified" : "modified" }} and
     {{ isSpecial ? "": "not"}} special after clicking "Refresh".</div>
 
-  <p style="color: red;"> nhược điểm NgClass: là ko jump đc CSS class khi <span style="color: black;"> Ctrl + +Click </span> ở
+  <p style="color: red;"> nhược điểm NgClass: là ko jump đc CSS class khi <span style="color: black;"> Ctrl + Click </span> ở
     html
     <br>
     vì trình Parser ko support parser ngClass => ta phải dùng tip trick
