--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <app-binding2></app-binding2>
 
 <app-binding2-radio></app-binding2-radio>
-
-<app-form-input></app-form-input>
+<app-input-keyup></app-input-keyup>
 
 <app-html-attribute></app-html-attribute>
 
