--- a/src/app/input-keyup/input-keyup.component.scss
+++ b/src/app/input-keyup/input-keyup.component.scss
@@ -1,7 +1,7 @@
-.form-input-component-layout{
+.input-keyup-component-layout{
   width: fit-content;
   height: fit-content;
-  background-color: greenyellow;
+  background-color: white;
   padding: 10px;
   border-style: solid;
   border-width: 10px;
