--- a/src/app/binding2-radio/binding2-radio.component.html
+++ b/src/app/binding2-radio/binding2-radio.component.html
@@ -4,8 +4,8 @@
   <p>
     <label *ngFor="let s of students">
       <!-- name = studentGroup: các radio cùng tên sẽ nhóm vào 1 group-->
-      <!-- [(ngModel)]="hero" binding 2 ways  -->
-      <!-- sẽ so sánh hero với [value] nếu bằng nhau thì là check, ko bằng nhau là uncheck -->
+      <!-- [(ngModel)]="student" binding 2 ways  -->
+      <!-- sẽ so sánh student với [value] nếu bằng nhau thì là check, ko bằng nhau là uncheck -->
       <input type="radio" name="studentGroup" [(ngModel)]="student" [value]="s">{{s.name}}
     </label>
     <label><input type="radio" name="studentGroup" (click)="student = null">None of the above</label>
