--- a/src/app/ng-style/ng-style.component.html
+++ b/src/app/ng-style/ng-style.component.html
@@ -1,5 +1,5 @@
 <div class="ng-style-component-layout">
-  <h1>ng-class.component:  [ngStyle]</h1>
+  <h1>ng-style.component:  [ngStyle]</h1>
   <p style="color: red;">nên dùng [ngClass] thay cho [ngStyle] nếu có thể</p>
 
   <div [style.font-size]="islargeFont ? 'x-large' : 'smaller'">
