--- a/src/app/ng-switch/ng-switch.component.html
+++ b/src/app/ng-switch/ng-switch.component.html
@@ -1,5 +1,7 @@
 <div class="ng-switch-component-layout">
-  <div>radio group: {{hero|json}} </div>
+  <h1>ng-switch.component:</h1>
+  <p>ngSwitch sẽ delete DOM cũ và tạo mới DOM</p>
+  <h3 style="color: blue;">radio group: {{hero|json}} </h3>
   <p>
     <label *ngFor="let h of heroes">
       <!-- name = radioGroupName: nhóm tất cả các radio vào 1 group -->
