--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-binding2></app-binding2>
 
 <app-binding2-radio></app-binding2-radio>
+<app-binding2-selection></app-binding2-selection>
 <app-input-keyup></app-input-keyup>
 
 <app-html-attribute></app-html-attribute>
@@ -13,5 +14,3 @@
 <app-ng-for></app-ng-for>
 
 <app-ng-switch></app-ng-switch>
-
-
