--- a/src/app/binding/binding.component.html
+++ b/src/app/binding/binding.component.html
@@ -1,10 +1,10 @@
 <!-- title = variable in *.ts -->
 <div class="binding-component-layout">
-  <h2> {{title}}</h2>
-  <p>{{user.name}}</p>
+  <h2>{{ title }}</h2>
+  <p>{{ user.name }}</p>
 
   <!-- click event -->
-  <div (click)="clickButton()" class="button"> click button </div>
+  <div (click)="clickButton()" class="button">click button</div>
 
-  <h1 style="color: blue;">{{numberOfClick}}</h1>
+  <h1 style="color: blue">{{ numberOfClick }}</h1>
 </div>
