--- a/src/app/binding2-selection/binding2-selection.component.html
+++ b/src/app/binding2-selection/binding2-selection.component.html
@@ -7,7 +7,7 @@
     <select class="form-input" id="role" name="role" [(ngModel)]="roleSelect">
       <!-- selection = so sánh [ngValue] với  [(ngModel)]="roleSelect"-->
       <!-- dùng [ngValue] thay cho [value]. [value] chỉ dùng cho String -->
-      <option *ngFor="let r of roles" [ngValue]="r">{{ r.name }}</option>
+      <option *ngFor="let role of roles" [ngValue]="role">{{ role.name }}</option>
     </select>
   </div>
 </div>
