--- a/src/app/ng-style/ng-style.component.html
+++ b/src/app/ng-style/ng-style.component.html
@@ -1,20 +1,21 @@
 <div class="ng-style-component-layout">
-  <h1>ng-style.component:  [ngStyle]</h1>
-  <p style="color: red;">nên dùng [ngClass] thay cho [ngStyle] nếu có thể</p>
+  <h1>ng-style.component: [ngStyle]</h1>
+  <p style="color: red">nên dùng [ngClass] thay cho [style.attribute] nếu có thể</p>
 
   <div [style.font-size]="islargeFont ? 'x-large' : 'smaller'">
-    This div is x-large or smaller.
+    [style.font-size]= x-large or smaller.
   </div>
 
-  <button class="button" (click)="islargeFont = !islargeFont"> isLargeFont = {{islargeFont}}</button>
+  <button class="button" (click)="islargeFont = !islargeFont">
+    isLargeFont = {{ islargeFont }}
+  </button>
 
   <p>----------------------------------------------------------------------</p>
-    <!-- object.style.visibility = "visible|hidden|collapse|initial|inherit" -->
+  <!-- object.style.visibility = "visible|hidden|collapse|initial|inherit" -->
   <!-- hidden sẽ ẩn đi, nhưng vẫn chiếm ko gian -->
-  <div [style.visibility]="isHidden ? 'hidden': 'visible'" >Show with style.visibility = </div>
+  <div [style.visibility]="isHidden ? 'hidden' : 'visible'">Show with style.visibility =</div>
   <!-- style.display là thuộc tính của div. none: sẽ không chiếm không gian  -->
   <div [style.display]="isHidden ? 'none' : 'block'">Show with style.display = none</div>
 
-  <button class="button" (click)="isHidden = !isHidden">Show/Hidden: {{isHidden}}</button>
-
+  <button class="button" (click)="isHidden = !isHidden">Show/Hidden: {{ isHidden }}</button>
 </div>
