--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-
 /* https://www.w3schools.com/css/css3_buttons.asp */
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4caf50; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -15,18 +14,44 @@
   cursor: pointer;
 }
 
-.button1{
-  @extend.button;  // thừa kế các thuộc tính của button
-  background-color: #4CAF50;
-}
-
-.button2{
+.button1 {
   @extend.button; // thừa kế các thuộc tính của button
-  background-color: #008CBA;
+  background-color: #4caf50;
 }
 
-.button3{
+.button2 {
+  @extend.button; // thừa kế các thuộc tính của button
+  background-color: #008cba;
+}
+
+.button3 {
   @extend.button; // thừa kế các thuộc tính của button
   background-color: #f44336;
 }
 
+/* Navigation link styles */
+nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-right: 10px;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #eee;
+  border-radius: 4px;
+}
+nav a:visited,
+a:link {
+  color: #607d8b;
+}
+nav a:hover {
+  color: #039be5;
+  background-color: #cfd8dc;
+}
+nav a.active {
+  color: red;
+}
+
+/* everywhere else */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
