--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <a [routerLink]="['/ng-for']" routerLinkActive="active">ng-for</a>
   <a [routerLink]="['/ng-switch']" routerLinkActive="active">ng-switch</a>
   <a [routerLink]="['/text-editor']" routerLinkActive="active">text-editor</a>
+  <a [routerLink]="['/dialog']" routerLinkActive="active">dialog</a>
 </nav>
 <div class="app-router-outlet-layout">
   <router-outlet></router-outlet>
