--- a/src/app/ng-for/ng-for.component.scss
+++ b/src/app/ng-for/ng-for.component.scss
@@ -1,4 +1,4 @@
-.ngfor-component-layout{
+.ngfor-component-layout {
   width: fit-content;
   height: fit-content;
   background-color: greenyellow;
@@ -15,6 +15,11 @@
   border-style: solid;
   border-color: black;
   border-width: 1px;
-	padding: 20px;
-	max-width: 450px;
+  padding: 20px;
+  max-width: 450px;
+}
+
+button {
+  display: block;
+  margin: 15px;
 }
